# asteroids-practice

./: CMakeLists.txt
.cache/clangd/index/: asteroid.cpp.6933A961D2AC5124.idx  asteroid.h.318370141CF74BBD.idx  bullet.cpp.AEC6F625B148EF8D.idx  bullet.cpp.B12369764B8C365E.idx  bullet.h.6A18165154505B80.idx  bullet.h.F7ACBCDFB8481546.idx  collision.cpp.7F7FFDFB7EF0891C.idx  collision.h.DF0AE5F8757D5CB6.idx  config.h.401FCB7B9BB5F87A.idx  config.h.6B56C5BA582CAA9D.idx  entity.cpp.4D6B1B3026E587B5.idx  entity.cpp.A7220FC1EF152E2E.idx  entity.h.9A81D08EC3AC558A.idx  entity.h.FECB8D7CEAA79935.idx  epsilon.cpp.C20AE000A819D0E9.idx  epsilon.h.B3A0F5E6F6910922.idx  handle.h.ECEEE9D047975D2C.idx  input.cpp.127A414B2704E004.idx  input.cpp.64073A9FE2E160D5.idx  input.h.4AD76DEC9BF7A838.idx  input.h.909B36142D77ED37.idx  line_explode.cpp.A24DA2CFCC5BCCFB.idx  line_explode.h.FA05FC2D7090BE00.idx  main.cpp.0340A723112F804B.idx  main.cpp.36FECD859E9B41D9.idx  player.cpp.1CB10AB6292FC681.idx  player.cpp.D724D452115051B5.idx  player.h.0AA5C9ECAB498E31.idx  player.h.4BB1B279792799CE.idx  render.cpp.1FF45205D8CA3C66.idx  render.cpp.D926FD46B549BDD4.idx  render.h.3E629D5751417574.idx  render.h.D614E4434654F48E.idx  table.h.1ECBE93C94601555.idx  vec2.cpp.0AC29BB3F2C4136B.idx  vec2.cpp.0F4F793DF0CC2E3D.idx  vec2.h.15840CB2879257B0.idx  vec2.h.DC19F4354F19F00D.idx  world.cpp.12B0001E454148AB.idx  world.cpp.CE044071F558DDA3.idx  (+2 more)
src/: '  asteroid.cpp  asteroid.h  bullet.cpp  bullet.h  collision.cpp  collision.h  config.h  entity.cpp  entity.h  epsilon.cpp  epsilon.h  handle.h  input.cpp  input.h  line_explode.cpp  line_explode.h  main.cpp  player.cpp  player.h  render.cpp  render.h  vec2.cpp  vec2.h  world.cpp  world.h
